// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render 1`] = `
.emotion-0 {
  height: 60px;
  position: relative;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #002339;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  box-sizing: border-box;
  color: #fff;
  display: flex;
  -webkit-flex: 0 0 60px;
  -ms-flex: 0 0 60px;
  flex: 0 0 60px;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  height: 60px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  left: 0;
  padding: 0 24px;
  position: static;
  right: 0;
  top: 0;
  z-index: 2;
}

.emotion-2.scrolled {
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
}

.emotion-2 .flush-right {
  margin-left: auto;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: flex;
  height: 60px;
  position: relative;
}

.emotion-3.simple {
  color: #fff;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 16px;
  padding: 0 12px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-3.simple.nav-link {
  cursor: pointer;
}

.emotion-3.simple.nav-link:hover {
  color: rgba(255,255,255,0.75);
}

.emotion-3.simple.active {
  box-shadow: inset 0 -4px 0 #3697f2;
}

.emotion-3.simple.nav-link.active:hover {
  box-shadow: inset 0 -4px 0 rgba(54,151,242,0.75);
}

.emotion-3 .nav-title {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #fff;
  display: flex;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 16px;
  height: 100%;
  padding: 0 12px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-3.nav-link .nav-title {
  cursor: pointer;
}

.emotion-3.active .nav-title,
.emotion-3 .active.nav-title {
  box-shadow: inset 0 -4px 0 #3697f2;
}

.emotion-3 .nav-title:hover {
  color: rgba(255,255,255,0.75);
}

.emotion-3.nav-link.active .nav-title:hover,
.emotion-3.nav-link .active.nav-title:hover {
  box-shadow: inset 0 -4px 0 rgba(54,151,242,0.75);
}

.emotion-3 img.nav-logo {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: flex;
  height: 34px;
}

.emotion-3 .nav-icon,
.emotion-3:hover .nav-icon {
  width: 24px;
  height: 24px;
}

.emotion-3 .nav-icon path,
.emotion-3:hover .nav-icon path,
.emotion-3 .nav-icon ellipse,
.emotion-3:hover .nav-icon ellipse,
.emotion-3 .nav-icon rect,
.emotion-3:hover .nav-icon rect,
.emotion-3 .nav-icon circle,
.emotion-3:hover .nav-icon circle {
  fill: #fff;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-3.nav-link:hover .nav-icon path,
.emotion-3.nav-link:hover .nav-icon ellipse,
.emotion-3.nav-link:hover .nav-icon rect,
.emotion-3.nav-link:hover .nav-icon circle {
  fill: rgba(255,255,255,0.75);
}

.emotion-4 {
  height: 36px;
  cursor: pointer;
}

.emotion-6 {
  margin-left: 10%;
  width: 50%;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: flex;
  height: 60px;
  position: relative;
  width: 100%;
}

.emotion-8.simple {
  color: #fff;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 16px;
  padding: 0 12px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-8.simple.nav-link {
  cursor: pointer;
}

.emotion-8.simple.nav-link:hover {
  color: rgba(255,255,255,0.75);
}

.emotion-8.simple.active {
  box-shadow: inset 0 -4px 0 #3697f2;
}

.emotion-8.simple.nav-link.active:hover {
  box-shadow: inset 0 -4px 0 rgba(54,151,242,0.75);
}

.emotion-8 .nav-title {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #fff;
  display: flex;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 16px;
  height: 100%;
  padding: 0 12px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-8.nav-link .nav-title {
  cursor: pointer;
}

.emotion-8.active .nav-title,
.emotion-8 .active.nav-title {
  box-shadow: inset 0 -4px 0 #3697f2;
}

.emotion-8 .nav-title:hover {
  color: rgba(255,255,255,0.75);
}

.emotion-8.nav-link.active .nav-title:hover,
.emotion-8.nav-link .active.nav-title:hover {
  box-shadow: inset 0 -4px 0 rgba(54,151,242,0.75);
}

.emotion-8 img.nav-logo {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: flex;
  height: 34px;
}

.emotion-8 .nav-icon,
.emotion-8:hover .nav-icon {
  width: 24px;
  height: 24px;
}

.emotion-8 .nav-icon path,
.emotion-8:hover .nav-icon path,
.emotion-8 .nav-icon ellipse,
.emotion-8:hover .nav-icon ellipse,
.emotion-8 .nav-icon rect,
.emotion-8:hover .nav-icon rect,
.emotion-8 .nav-icon circle,
.emotion-8:hover .nav-icon circle {
  fill: #fff;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-8.nav-link:hover .nav-icon path,
.emotion-8.nav-link:hover .nav-icon ellipse,
.emotion-8.nav-link:hover .nav-icon rect,
.emotion-8.nav-link:hover .nav-icon circle {
  fill: rgba(255,255,255,0.75);
}

.emotion-10 {
  display: flex;
}

.emotion-12 {
  fill: #fff;
  cursor: pointer;
  vertical-align: text-bottom;
}

.emotion-13 {
  position: relative;
  width: 0;
  height: 0;
}

.emotion-15 {
  margin-left: 15px;
}

<div
  class="emotion-0 emotion-1"
  data-testid="header"
>
  <div
    class="emotion-2 denali-navbar"
    data-testid="navbar"
  >
    <div
      class="emotion-3 simple denali-navbar-item"
      data-testid="navbar-item"
    >
      <a
        href="/"
      >
        <img
          class="emotion-4 emotion-5"
          src="/static/athenz-logo-full.png"
        />
      </a>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 simple denali-navbar-item"
        data-testid="navbar-item"
      />
    </div>
    <div
      class="emotion-3 simple flush-right denali-navbar-item"
      data-testid="navbar-item"
    >
      <div
        class="emotion-10 emotion-11"
        data-testid="header-menu"
      >
        <svg
          class="emotion-12"
          data-testid="icon"
          data-wdio=""
          height="25px"
          id="notifications-icon"
          viewBox="0 0 1024 1024"
          width="25px"
        >
          <title>
            notification
          </title>
          <path
            d="M925.867 627.2l-68.267-68.267c-15.132-16.256-24.706-37.864-25.595-61.692l-0.005-0.174v-134.4c0-172.8-115.2-320-320-320s-320 142.933-320 320v149.333c-0.424 14.075-6.029 26.765-14.962 36.297l0.028-0.030-78.933 78.933c-7.763 7.612-12.628 18.155-12.8 29.835l-0 0.032v153.6c0 23.564 19.103 42.667 42.667 42.667v0h236.8c12.454 70.953 73.611 124.182 147.2 124.182s134.746-53.229 147.069-123.285l0.131-0.897h236.8c23.564 0 42.667-19.103 42.667-42.667v0-153.6c-0.172-11.712-5.037-22.255-12.793-29.86l-0.007-0.007zM853.333 768h-682.667v-91.733l66.133-68.267c24.782-24.511 40.224-58.423 40.533-95.941l0-0.059v-149.333c0-113.067 61.867-234.667 234.667-234.667s234.667 125.867 234.667 234.667v134.4c0.879 47.11 19.381 89.736 49.168 121.71l-0.102-0.11 57.6 57.6z"
          />
        </svg>
        <div
          class="emotion-13 emotion-14"
        />
        <div
          class="emotion-15 emotion-16"
        >
          <svg
            class="emotion-12"
            data-testid="icon"
            data-wdio=""
            height="25px"
            id=""
            viewBox="0 0 1024 1024"
            width="25px"
          >
            <title>
              help-circle
            </title>
            <path
              d="M512 42.667c-259.206 0-469.333 210.128-469.333 469.333s210.128 469.333 469.333 469.333c259.206 0 469.333-210.128 469.333-469.333v0c0-259.206-210.128-469.333-469.333-469.333v0zM512 896c-212.077 0-384-171.923-384-384s171.923-384 384-384c212.077 0 384 171.923 384 384v0c0 212.077-171.923 384-384 384v0z"
            />
            <path
              d="M554.667 768c0 23.564-19.103 42.667-42.667 42.667s-42.667-19.103-42.667-42.667c0-23.564 19.103-42.667 42.667-42.667s42.667 19.103 42.667 42.667z"
            />
            <path
              d="M549.333 219.52c-11.244-2.339-24.166-3.678-37.4-3.678-71.49 0-133.854 39.072-166.904 97.027l-0.496 0.945c-3.783 6.395-6.018 14.093-6.018 22.313 0 14.468 6.924 27.319 17.64 35.419l0.112 0.081c6.829 4.846 15.334 7.747 24.517 7.747 15.995 0 29.934-8.801 37.239-21.826l0.111-0.215c12.111-22.947 31.869-40.492 55.815-49.471l0.718-0.236c98.133-33.707 187.52 72.32 120.96 170.667-16.346 22.524-42.587 37.002-72.21 37.002-4.025 0-7.988-0.267-11.871-0.785l0.455 0.050c-1.281-0.156-2.763-0.245-4.267-0.245s-2.986 0.089-4.443 0.262l0.176-0.017c-19.477 4.079-33.927 21.016-34.133 41.364l-0 0.022s0 0 0 1.28v82.773c-0.004 0.232-0.007 0.505-0.007 0.78 0 21.42 15.032 39.329 35.123 43.752l0.297 0.055c2.182 0.396 4.694 0.622 7.258 0.622 23.564 0 42.667-19.103 42.667-42.667 0-0.219-0.002-0.437-0.005-0.655l0 0.033v-31.147c0.196-9.48 6.547-17.425 15.209-20.015l0.151-0.039c78.046-25.561 133.424-97.737 133.424-182.847 0-92.861-65.924-170.325-153.523-188.144l-1.234-0.21z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header should render with search 1`] = `
.emotion-0 {
  height: 60px;
  position: relative;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #002339;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  box-sizing: border-box;
  color: #fff;
  display: flex;
  -webkit-flex: 0 0 60px;
  -ms-flex: 0 0 60px;
  flex: 0 0 60px;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  height: 60px;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  left: 0;
  padding: 0 24px;
  position: static;
  right: 0;
  top: 0;
  z-index: 2;
}

.emotion-2.scrolled {
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
}

.emotion-2 .flush-right {
  margin-left: auto;
}

.emotion-3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: flex;
  height: 60px;
  position: relative;
}

.emotion-3.simple {
  color: #fff;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 16px;
  padding: 0 12px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-3.simple.nav-link {
  cursor: pointer;
}

.emotion-3.simple.nav-link:hover {
  color: rgba(255,255,255,0.75);
}

.emotion-3.simple.active {
  box-shadow: inset 0 -4px 0 #3697f2;
}

.emotion-3.simple.nav-link.active:hover {
  box-shadow: inset 0 -4px 0 rgba(54,151,242,0.75);
}

.emotion-3 .nav-title {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #fff;
  display: flex;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 16px;
  height: 100%;
  padding: 0 12px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-3.nav-link .nav-title {
  cursor: pointer;
}

.emotion-3.active .nav-title,
.emotion-3 .active.nav-title {
  box-shadow: inset 0 -4px 0 #3697f2;
}

.emotion-3 .nav-title:hover {
  color: rgba(255,255,255,0.75);
}

.emotion-3.nav-link.active .nav-title:hover,
.emotion-3.nav-link .active.nav-title:hover {
  box-shadow: inset 0 -4px 0 rgba(54,151,242,0.75);
}

.emotion-3 img.nav-logo {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: flex;
  height: 34px;
}

.emotion-3 .nav-icon,
.emotion-3:hover .nav-icon {
  width: 24px;
  height: 24px;
}

.emotion-3 .nav-icon path,
.emotion-3:hover .nav-icon path,
.emotion-3 .nav-icon ellipse,
.emotion-3:hover .nav-icon ellipse,
.emotion-3 .nav-icon rect,
.emotion-3:hover .nav-icon rect,
.emotion-3 .nav-icon circle,
.emotion-3:hover .nav-icon circle {
  fill: #fff;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-3.nav-link:hover .nav-icon path,
.emotion-3.nav-link:hover .nav-icon ellipse,
.emotion-3.nav-link:hover .nav-icon rect,
.emotion-3.nav-link:hover .nav-icon circle {
  fill: rgba(255,255,255,0.75);
}

.emotion-4 {
  height: 36px;
  cursor: pointer;
}

.emotion-6 {
  margin-left: 10%;
  width: 50%;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: flex;
  height: 60px;
  position: relative;
  width: 100%;
}

.emotion-8.simple {
  color: #fff;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 16px;
  padding: 0 12px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-8.simple.nav-link {
  cursor: pointer;
}

.emotion-8.simple.nav-link:hover {
  color: rgba(255,255,255,0.75);
}

.emotion-8.simple.active {
  box-shadow: inset 0 -4px 0 #3697f2;
}

.emotion-8.simple.nav-link.active:hover {
  box-shadow: inset 0 -4px 0 rgba(54,151,242,0.75);
}

.emotion-8 .nav-title {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #fff;
  display: flex;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 16px;
  height: 100%;
  padding: 0 12px;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-8.nav-link .nav-title {
  cursor: pointer;
}

.emotion-8.active .nav-title,
.emotion-8 .active.nav-title {
  box-shadow: inset 0 -4px 0 #3697f2;
}

.emotion-8 .nav-title:hover {
  color: rgba(255,255,255,0.75);
}

.emotion-8.nav-link.active .nav-title:hover,
.emotion-8.nav-link .active.nav-title:hover {
  box-shadow: inset 0 -4px 0 rgba(54,151,242,0.75);
}

.emotion-8 img.nav-logo {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: flex;
  height: 34px;
}

.emotion-8 .nav-icon,
.emotion-8:hover .nav-icon {
  width: 24px;
  height: 24px;
}

.emotion-8 .nav-icon path,
.emotion-8:hover .nav-icon path,
.emotion-8 .nav-icon ellipse,
.emotion-8:hover .nav-icon ellipse,
.emotion-8 .nav-icon rect,
.emotion-8:hover .nav-icon rect,
.emotion-8 .nav-icon circle,
.emotion-8:hover .nav-icon circle {
  fill: #fff;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.emotion-8.nav-link:hover .nav-icon path,
.emotion-8.nav-link:hover .nav-icon ellipse,
.emotion-8.nav-link:hover .nav-icon rect,
.emotion-8.nav-link:hover .nav-icon circle {
  fill: rgba(255,255,255,0.75);
}

.emotion-9 {
  display: flex;
  width: 100%;
}

.emotion-11 {
  background: #ffffff;
  width: 35%;
}

.emotion-13 {
  position: relative;
  width: 100%;
}

.emotion-13 input {
  cursor: pointer;
}

.emotion-14 {
  box-sizing: border-box;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  font-family: Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 300;
  position: relative;
  width: 100%;
}

.emotion-14 input {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: rgba(53,112,244,0.05);
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border-right: transparent;
  border-left: transparent;
  border-radius: 2px;
  box-shadow: none;
  box-sizing: border-box;
  color: #303030;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  font: inherit;
  height: 36px;
  margin: 0;
  outline: none;
  padding: 0 1rem;
  text-align: left;
  width: 100%;
}

.emotion-14.animated input {
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out,border 0.2s ease-in-out;
}

.emotion-14 input::-webkit-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-14 input::-moz-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-14 input:-ms-input-placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-14 input::placeholder {
  color: rgba(48,48,48,0.6);
}

.emotion-14 input.focused,
.emotion-14 input:active,
.emotion-14 input:focus {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #3570f4;
  color: #303030;
}

.emotion-14 input:invalid {
  background: rgba(53,112,244,0.05);
  border-bottom: 2px solid #d01111;
  color: #303030;
}

.emotion-14 .message {
  font-size: 12px;
  left: 0;
  line-height: 1.8;
  position: absolute;
  top: 2.571rem;
}

.emotion-14.error input,
.emotion-14.error input.focused,
.emotion-14.error input:active,
.emotion-14.error input:focus {
  border-bottom: 2px solid #d01111;
}

.emotion-14.error .message {
  color: #d01111;
}

.emotion-14 input {
  padding-right: 36px;
}

.emotion-14 .input-icon {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: flex;
  height: 36px;
  position: absolute;
  right: 6px;
}

.emotion-15 {
  fill: #d5d5d5;
  cursor: pointer;
  vertical-align: text-bottom;
}

.emotion-16 {
  background: #ffffff;
  width: 65%;
  margin-left: 5px;
}

.emotion-19 {
  fill: #3570f4;
  cursor: inherit;
  vertical-align: text-bottom;
}

.emotion-21 {
  display: flex;
}

.emotion-23 {
  fill: #fff;
  cursor: pointer;
  vertical-align: text-bottom;
}

.emotion-24 {
  position: relative;
  width: 0;
  height: 0;
}

.emotion-26 {
  margin-left: 15px;
}

<div
  class="emotion-0 emotion-1"
  data-testid="header"
>
  <div
    class="emotion-2 denali-navbar"
    data-testid="navbar"
  >
    <div
      class="emotion-3 simple denali-navbar-item"
      data-testid="navbar-item"
    >
      <a
        href="/"
      >
        <img
          class="emotion-4 emotion-5"
          src="/static/athenz-logo-full.png"
        />
      </a>
    </div>
    <div
      class="emotion-6 emotion-7"
    >
      <div
        class="emotion-8 simple denali-navbar-item"
        data-testid="navbar-item"
      >
        <div
          class="emotion-9 emotion-10"
        >
          <div
            class="emotion-11 emotion-12"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="downshift-0-label"
              class="emotion-13 denali-input-dropdown"
              data-testid="input-dropdown"
              role="combobox"
            >
              <div
                class="emotion-14 denali-input animated"
                data-testid="input-wrapper"
              >
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  autocorrect="off"
                  data-testid="input-node"
                  id="downshift-0-input"
                  name="search-type"
                  readonly=""
                  spellcheck="false"
                  value="Domain"
                />
                <div
                  class="input-icon"
                >
                  <svg
                    class="emotion-15"
                    data-testid="icon"
                    data-wdio=""
                    height="24px"
                    id=""
                    viewBox="0 0 1024 1024"
                    width="24px"
                  >
                    <title>
                      arrowhead-down
                    </title>
                    <path
                      d="M512 580.267l-226.133-226.133c-7.461-8.401-18.291-13.668-30.351-13.668-13.957 0-26.267 7.055-33.558 17.793l-0.091 0.142c-5.319 7.276-8.51 16.4-8.51 26.27 0 12.199 4.876 23.259 12.785 31.338l-0.008-0.008 256 253.867c7.434 8.083 18.061 13.13 29.867 13.13s22.432-5.047 29.84-13.101l0.026-0.029 256-253.867c7.901-8.071 12.777-19.131 12.777-31.33 0-9.87-3.192-18.994-8.599-26.397l0.088 0.127c-7.382-10.88-19.691-17.934-33.649-17.934-12.060 0-22.89 5.267-30.315 13.626l-0.036 0.042z"
                    />
                  </svg>
                </div>
                <div
                  class="message"
                  data-testid="message"
                />
              </div>
            </div>
          </div>
          <div
            class="emotion-16 emotion-17"
          >
            <div
              class="emotion-14 denali-input animated"
              data-testid="input-wrapper"
            >
              <input
                autocomplete="off"
                data-testid="input-node"
                name="search-text"
                placeholder="Search"
                value=""
              />
              <div
                class="input-icon"
              >
                <svg
                  class="emotion-19"
                  data-testid="icon"
                  data-wdio=""
                  height="24px"
                  id=""
                  viewBox="0 0 1024 1024"
                  width="24px"
                >
                  <title>
                    search
                  </title>
                  <path
                    d="M659.413 599.68c40.125-53.054 64.27-120.136 64.27-192.857 0-177.556-143.937-321.493-321.493-321.493s-321.493 143.937-321.493 321.493c0 177.556 143.937 321.493 321.493 321.493 74.297 0 142.708-25.203 197.149-67.525l-0.726 0.543 267.307 264.96c7.723 7.731 18.396 12.514 30.187 12.514s22.464-4.782 30.186-12.513l0-0c7.795-7.733 12.621-18.45 12.621-30.293s-4.826-22.56-12.618-30.291l-0.003-0.003zM444.8 637.227c-11.829 2.113-25.446 3.322-39.345 3.322-129.603 0-234.667-105.064-234.667-234.667s105.064-234.667 234.667-234.667c129.603 0 234.667 105.064 234.667 234.667 0 13.899-1.208 27.516-3.526 40.752l0.204-1.407c-17.178 98.349-93.651 174.822-190.593 191.796l-1.407 0.204z"
                  />
                </svg>
              </div>
              <div
                class="message"
                data-testid="message"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-3 simple flush-right denali-navbar-item"
      data-testid="navbar-item"
    >
      <div
        class="emotion-21 emotion-22"
        data-testid="header-menu"
      >
        <svg
          class="emotion-23"
          data-testid="icon"
          data-wdio=""
          height="25px"
          id="notifications-icon"
          viewBox="0 0 1024 1024"
          width="25px"
        >
          <title>
            notification
          </title>
          <path
            d="M925.867 627.2l-68.267-68.267c-15.132-16.256-24.706-37.864-25.595-61.692l-0.005-0.174v-134.4c0-172.8-115.2-320-320-320s-320 142.933-320 320v149.333c-0.424 14.075-6.029 26.765-14.962 36.297l0.028-0.030-78.933 78.933c-7.763 7.612-12.628 18.155-12.8 29.835l-0 0.032v153.6c0 23.564 19.103 42.667 42.667 42.667v0h236.8c12.454 70.953 73.611 124.182 147.2 124.182s134.746-53.229 147.069-123.285l0.131-0.897h236.8c23.564 0 42.667-19.103 42.667-42.667v0-153.6c-0.172-11.712-5.037-22.255-12.793-29.86l-0.007-0.007zM853.333 768h-682.667v-91.733l66.133-68.267c24.782-24.511 40.224-58.423 40.533-95.941l0-0.059v-149.333c0-113.067 61.867-234.667 234.667-234.667s234.667 125.867 234.667 234.667v134.4c0.879 47.11 19.381 89.736 49.168 121.71l-0.102-0.11 57.6 57.6z"
          />
        </svg>
        <div
          class="emotion-24 emotion-25"
        />
        <div
          class="emotion-26 emotion-27"
        >
          <svg
            class="emotion-23"
            data-testid="icon"
            data-wdio=""
            height="25px"
            id=""
            viewBox="0 0 1024 1024"
            width="25px"
          >
            <title>
              help-circle
            </title>
            <path
              d="M512 42.667c-259.206 0-469.333 210.128-469.333 469.333s210.128 469.333 469.333 469.333c259.206 0 469.333-210.128 469.333-469.333v0c0-259.206-210.128-469.333-469.333-469.333v0zM512 896c-212.077 0-384-171.923-384-384s171.923-384 384-384c212.077 0 384 171.923 384 384v0c0 212.077-171.923 384-384 384v0z"
            />
            <path
              d="M554.667 768c0 23.564-19.103 42.667-42.667 42.667s-42.667-19.103-42.667-42.667c0-23.564 19.103-42.667 42.667-42.667s42.667 19.103 42.667 42.667z"
            />
            <path
              d="M549.333 219.52c-11.244-2.339-24.166-3.678-37.4-3.678-71.49 0-133.854 39.072-166.904 97.027l-0.496 0.945c-3.783 6.395-6.018 14.093-6.018 22.313 0 14.468 6.924 27.319 17.64 35.419l0.112 0.081c6.829 4.846 15.334 7.747 24.517 7.747 15.995 0 29.934-8.801 37.239-21.826l0.111-0.215c12.111-22.947 31.869-40.492 55.815-49.471l0.718-0.236c98.133-33.707 187.52 72.32 120.96 170.667-16.346 22.524-42.587 37.002-72.21 37.002-4.025 0-7.988-0.267-11.871-0.785l0.455 0.050c-1.281-0.156-2.763-0.245-4.267-0.245s-2.986 0.089-4.443 0.262l0.176-0.017c-19.477 4.079-33.927 21.016-34.133 41.364l-0 0.022s0 0 0 1.28v82.773c-0.004 0.232-0.007 0.505-0.007 0.78 0 21.42 15.032 39.329 35.123 43.752l0.297 0.055c2.182 0.396 4.694 0.622 7.258 0.622 23.564 0 42.667-19.103 42.667-42.667 0-0.219-0.002-0.437-0.005-0.655l0 0.033v-31.147c0.196-9.48 6.547-17.425 15.209-20.015l0.151-0.039c78.046-25.561 133.424-97.737 133.424-182.847 0-92.861-65.924-170.325-153.523-188.144l-1.234-0.21z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
